<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/jdl"
                android:textColor="@color/login"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:layout_width="197dp"
                        android:layout_height="match_parent"
                        android:hint="@string/namadpn">
                    </EditText>
                    <EditText
                        android:layout_width="194dp"
                        android:layout_height="match_parent"
                        android:hint="@string/namablkng">
                    </EditText>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_marginTop="10dp">


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editText1"
                        android:hint="@string/lahir">
                    </EditText>

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/editText2"
                        android:hint="@string/lahir">
                    </EditText>

                </TableRow>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:hint="@string/almt">
                </EditText>
                <RadioGroup>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/jnsklmn"
                        android:textSize="17sp">
                    </TextView>
                    <TableRow

                        android:layout_marginTop="15dp">
                        <RadioButton
                            android:text="@string/lk"
                            android:layout_marginHorizontal="15dp">

                        </RadioButton>
                        <RadioButton
                            android:text="@string/pr"
                            android:layout_marginHorizontal="15dp">

                        </RadioButton>
                    </TableRow>

                </RadioGroup>
            </TableLayout>



    </LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>